force-app/main/default/objects/Add_On__c/Add_On__c.object-meta.xml
<CustomObject>
    <label>Add On</label>
    <nameField>
        <displayFormat>AO-{00000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Add Ons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>