force-app/main/default/objects/Add_On__c/fields/Billing_Unit__c.field-meta.xml
<CustomField>
    <fullName>Billing_Unit__c</fullName>
    <label>Billing Unit</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Each</fullName>
                <default>true</default>
                <label>Each</label>
            </value>
            <value>
                <fullName>Hour</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>